--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Penguin Fashion</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -38,11 +40,29 @@
             </div>
           </nav>
     </header>
+    
     <main>
-
+        <!-- Hero Section -->
+        <section>
+            <div class="container">
+                <div class="row align-items-center">
+                    <!-- Section Title and Some info -->
+                    <div class="col-lg-6">
+                        <h1 class="title text-uppercase">
+                            <span>Be the Penguins</span> <br> of Winter
+                        </h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe qui, repellendus iusto sapiente velit consequuntur sequi eligendi nulla accusamus.</p>
+                        <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="/images/model.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
     <footer>
-        
     </footer>
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
