started working on product section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,49 @@
                 </div>
             </div>
         </section>
+        <!-- Product Section -->
+        <section class="products pt-5">
+            <!-- Women Section -->
+            <section class="womens-jackets container">
+                <h2 class="title text-uppercase">Women Jacket</h2>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/images/jacket-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/images/jacket-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="/images/jacket-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Men Section -->
+            <section class="mens-jackets container">
+
+            </section>
+        </section>
     </main>
 
     <footer>
