women section done!

--- a/index.html
+++ b/index.html
@@ -65,38 +65,47 @@
             <!-- Women Section -->
             <section class="womens-jackets container">
                 <h2 class="title text-uppercase">Women Jacket</h2>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/images/jacket-1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card h-100 p-3">
+                        <img src="/images/jacket-1.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Yellow Coat Jacket </h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur at unde tempore.</p>
+                          <div class="price-action d-flex justify-content-between">
+                            <h3 class="price">$234</h3>
+                            <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
                           </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/images/jacket-1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                    <div class="col">
+                      <div class="card h-100 p-3">
+                        <img src="/images/jacket-2.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Ladies Jacket</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui culpa nulla mollitia.</p>
+                          <div class="price-action d-flex justify-content-between">
+                            <h3 class="price">$234</h3>
+                            <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
                           </div>
+                        </div>
+                      </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
-                            <img src="/images/jacket-1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                    <div class="col">
+                      <div class="card h-100 p-3">
+                        <img src="/images/jacket-3.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Woman Leather Jacket </h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur at unde tempore.</p>
+                          <div class="price-action d-flex justify-content-between">
+                            <h3 class="price">$234</h3>
+                            <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
                           </div>
+                        </div>
+                      </div>
                     </div>
-                </div>
+                  </div>
             </section>
             <!-- Men Section -->
             <section class="mens-jackets container">
