--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <!-- Product Section -->
         <section class="products pt-5">
             <!-- Women Section -->
-            <section class="womens-jackets container">
+            <section class="womens-jackets container mb-5">
                 <h2 class="title text-uppercase">Women Jacket</h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col">
-                      <div class="card h-100 p-3">
+                    <div class="col mb-5">
+                      <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-1.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Yellow Coat Jacket </h5>
@@ -79,8 +79,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="card h-100 p-3">
+                    <div class="col mb-5">
+                        <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-2.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Ladies Jacket</h5>
@@ -92,8 +92,8 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="card h-100 p-3">
+                    <div class="col mb-5">
+                        <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-3.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Woman Leather Jacket </h5>
@@ -108,8 +108,49 @@
                   </div>
             </section>
             <!-- Men Section -->
-            <section class="mens-jackets container">
-
+            <section class="mens-jackets container mt-5">
+                <h2 class="title text-uppercase">Men Jacket</h2>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col mb-5">
+                      <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
+                        <img src="/images/jacket-4.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Yellow Coat Jacket </h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur at unde tempore.</p>
+                          <div class="price-action d-flex justify-content-between">
+                            <h3 class="price">$234</h3>
+                            <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
+                        <img src="/images/jacket-5.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Ladies Jacket</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui culpa nulla mollitia.</p>
+                          <div class="price-action d-flex justify-content-between">
+                            <h3 class="price">$234</h3>
+                            <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
+                        <img src="/images/jacket-6.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Woman Leather Jacket </h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur at unde tempore.</p>
+                          <div class="price-action d-flex justify-content-between">
+                            <h3 class="price">$234</h3>
+                            <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
             </section>
         </section>
     </main>
