--- a/index.html
+++ b/index.html
@@ -156,6 +156,49 @@
     </main>
 
     <footer>
+        <!-- Footer Section -->
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="shadow mb-3 rounded card w-75 d-flex flex-row align-items-center">
+                                <img src="/icons/image 12.png" width="78px" height="82px" alt="" srcset="">
+                                <div class="card-body">
+                                    <h4 class="card-title">Find the Perfect Fit</h4>
+                                    <p class="card-text">Everybody is different, which is why we offer styles for every body.</p>
+                                </div>      
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="shadow mb-3 rounded card w-75 d-flex flex-row align-items-center">
+                                <img src="/icons/image 13.png" width="78px" height="82px" alt="" srcset="">
+                                <div class="card-body">
+                                    <h4 class="card-title">Find the Perfect Fit</h4>
+                                    <p class="card-text">Everybody is different, which is why we offer styles for every body.</p>
+                                </div>      
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="shadow mb-3 rounded card w-75 d-flex flex-row align-items-center">
+                                <img src="/icons/image 14.png" width="78px" height="82px" alt="" srcset="">
+                                <div class="card-body">
+                                    <h4 class="card-title">Find the Perfect Fit</h4>
+                                    <p class="card-text">Everybody is different, which is why we offer styles for every body.</p>
+                                </div>      
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <img src="/images/shopping.png" width="600px" alt="" srcset="">
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
