--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="/images/logo.png" alt="Bootstrap" width="292" height="40">
+                    <img src="/images/logo.png" alt="Penguin Fashion" width="292" height="40">
                   </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item px-3">
@@ -47,14 +47,14 @@
             <div class="container">
                 <div class="row align-items-center">
                     <!-- Section Title and Some info -->
-                    <div class="col-lg-6">
+                    <div class="col-12 col-lg-6">
                         <h1 class="title text-uppercase">
                             <span>Be the Penguins</span> <br> of Winter
                         </h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore saepe qui, repellendus iusto sapiente velit consequuntur sequi eligendi nulla accusamus.</p>
                         <a class="btn btn-light text-white text-uppercase" style="background-image:linear-gradient(180deg, #A4BC46 0%, #85A019 100%);" href="#" role="button"><img src="/icons/shopping-cart 1.png" width="24px" alt="" srcset=""> Buy Now</a>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-12 col-lg-6">
                         <img src="/images/model.png" alt="" srcset="">
                     </div>
                 </div>
@@ -66,7 +66,7 @@
             <section class="womens-jackets container mb-5">
                 <h2 class="title text-uppercase">Women Jacket</h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col mb-5">
+                    <div class="col-12 mb-5">
                       <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-1.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
@@ -79,7 +79,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col mb-5">
+                    <div class="col-12 mb-5">
                         <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-2.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
@@ -92,7 +92,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col mb-5">
+                    <div class="col-12 mb-5">
                         <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-3.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
@@ -111,7 +111,7 @@
             <section class="mens-jackets container mt-5">
                 <h2 class="title text-uppercase">Men Jacket</h2>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col mb-5">
+                    <div class="col-12 mb-5">
                       <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-4.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col mb-5">
+                    <div class="col-12 mb-5">
                         <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-5.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
@@ -137,7 +137,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col mb-5">
+                    <div class="col-12 mb-5">
                         <div class="card h-100 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                         <img src="/images/jacket-6.png" height="293px" width="293px" class="card-img-top px-5 pt-3 bg-secondary bg-opacity-25" alt="...">
                         <div class="card-body">
